[tool.poetry]
name = "cipher_yd2564"
version = "0.1.0"
description = "A Python package for encoding, decoding messages with the Caesar Shif Cipher."
authors = ["yifeitung <yifeidong95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
