[tool.poetry]
name = "cipher_yd2564"
version = "0.1.1"
description = "A Python package for encoding, decoding messages with the Caesar Shif Cipher."
authors = ["yifeitung <yifeidong95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.0"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
